2010-12-14  Torbjorn Granlund  <tege@gmplib.org>

	* mp-h.in: Remove.
	* configure.in: Remove mp-h.in from AC_OUTPUT invocation.

2010-12-13  Torbjorn Granlund  <tege@gmplib.org>

	* mpz/mod.c: Rewrite.

	* mpn/x86_64/corei/popcount.asm: New file.
	* mpn/x86_64/corei/hamdist.asm: New file.

	* mpn/x86_64/k10/hamdist.asm: New file.

	* configure.in: Amend last change for lame /bin/sh.

2010-12-12  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in: Comment out M4=m4-not-needed.

	* mpn/x86_64/k10/popcount.asm: New file.
	* configure.in: Setup special path for k10 and later AMD CPUs.
	Remove special x86_64'k8' path, since directory is non-existent.

2010-12-11  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/sparc32/ultrasparct1: New directory.
	* mpn/sparc32/ultrasparct1/add_n.asm: New file.
	* mpn/sparc32/ultrasparct1/sub_n.asm: New file.
	* mpn/sparc32/ultrasparct1/mul_1.asm: New file.
	* mpn/sparc32/ultrasparct1/addmul_1.asm: New file.
	* mpn/sparc32/ultrasparct1/submul_1.asm: New file.
	* mpn/sparc32/ultrasparct1/sqr_diagonal.asm: New file.

	* config.guess: Support Ultrasparc T2 and T3.
	* config.sub: Likewise.
	* configure.in: Likewise.

	* config.guess: Generalise BSD Sparc recognition by allowing any
	caps (needed for OpenBSD which spells things innovatively).

2010-12-01  Torbjorn Granlund  <tege@gmplib.org>

	* config.guess: Match new AMD processors, allow finer distinctions
	among old ones.
	* acinclude.m4 (X86_64_PATTERN): Likewise.
	* config.sub: Likewise.
	* configure.in: Rudimentarily support new AMD processors.

	* configure.in (--enable_assembly): New option.
	(target none-*-*): Disable, give error.

2010-11-29  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86/x86-defs.m4 (LEA): Support non-PIC code.
	* mpn/x86/darwin.m4 (LEA): Likewise.

	* tests/amd64call.asm: Rewrite for code size, and to match calls and
	returns.

	* tests/x86call.asm: Rewrite for code size, to support PIC, and to
	match calls and returns.
	* tests/x86check.c: Rewrite.
